plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'checkstyle'
}

group = 'animal'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//aws
	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.590'
	//model mapper
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
	//map struct
	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	implementation 'net.bytebuddy:byte-buddy:1.14.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'org.springframework:spring-webflux:6.0.11'
}

tasks.named('test') {
	useJUnitPlatform()
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
tasks.withType(Checkstyle) {
	reports {
		xml.required = true
		html.required = true
	}
}
checkstyle {
	configFile = file("config/checkstyle/naver-checkstyle-rules.xml")
	configProperties = ["suppressionFile": "config/checkstyle/naver-checkstyle-suppression.xml"]
}
bootJar {
	archiveFileName = 'animal-meeting-blue-green-app.jar'
}
